# bblean

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ann-experiment.py  bblean-demo.cast  environment.yaml  pyproject.toml  script.py  setup.py
.github/workflows/: ci-cpp.yaml  ci.yaml  upload-to-pypi.yaml
_examples_NOT_PORTED/: README.md
_examples_NOT_PORTED/data_splitting/: dataset_splitting.ipynb  lgbm_wrapper.py
_examples_NOT_PORTED/parallel_birch/: birch_BFs.py  birch_parallel.py  parallel_example.ipynb  sub_slurm.sh
_examples_NOT_PORTED/refinement/: refine_tutorial.ipynb
_examples_NOT_PORTED/simple_birch/: birch_tutorial.ipynb
bblean/: __init__.py  _config.py  _console.py  _ivf.py  _memory.py  _merges.py  _py_similarity.py  _timer.py  analysis.py  bitbirch.py  cli.py  config.py  fingerprints.py  fingerprints_io.py  ivf.py  ivf_index.py  memory.py  merges.py  metrics.py  multiround.py  packing.py  plotting.py  similarity.py  sklearn.py  smiles.py  smiles_io.py  test_multiround.py  utils.py
bblean/_legacy/: bb_int64_dense.py  bb_uint8.py
bblean/csrc/: simd-similarity.cpp  similarity.cpp
bbtools/: __init__.py  _console.py  bb_int64.py  bb_int64_dense.py  bb_lean.py  bb_lean_experimental.py  bb_uint8.py  bblean.py  bblean_unpacked.py  bblean_v1.py  cli.py  config.py  fake_fingerprints.py  merges.py  multiround.py  parallel.py  utils.py
bbtools/bb_lean/: __init__.py  bitbirch.py
coverage/: coverage-badge.json  coverage.json
devdocs/: api-reference.html  genindex.html  index.html  installing.html  linux_memory_setup.html  objects.inv  publications.html  search.html  searchindex.js  user-guide.html
devdocs/_api_autogen/: bblean.analysis.html  bblean.bitbirch.html  bblean.fingerprints.html  bblean.multiround.html  bblean.plotting.html  bblean.similarity.html  bblean.smiles.html
devdocs/_modules/: index.html
devdocs/_modules/bblean/: _py_similarity.html  analysis.html  bitbirch.html  fingerprints.html  multiround.html  plotting.html  similarity.html  smiles.html
devdocs/_static/: documentation_options.js
devdocs/user-guide/: linux_memory_setup.html  parameters.html
devdocs/user-guide/notebooks/: bitbirch_best_practices.html  bitbirch_best_practices.ipynb  bitbirch_quickstart.html  bitbirch_quickstart.ipynb
docs/src/: api-reference.rst  conf.py  generate-api.rst  installing.rst  linux_memory_setup.rst  publications.rst  user-guide.rst
docs/src/_autosummary/: bblean.analysis.rst  bblean.bitbirch.rst  bblean.fingerprints.rst  bblean.multiround.rst  bblean.plotting.rst  bblean.similarity.rst  bblean.smiles.rst
docs/src/_static/: style.css
docs/src/_templates/: custom-module.rst
docs/src/api_autogen/: bblean.rst
docs/src/examples/: bitbirch_best_practices.ipynb  bitbirch_quickstart.ipynb
docs/src/user-guide/: parameters.rst
docs/src/user-guide/notebooks/: bitbirch_best_practices.ipynb  bitbirch_quickstart.ipynb
examples/: bitbirch_best_practices.ipynb  bitbirch_quickstart.ipynb  chembl-sample-3k.smi  chembl_33_10K.smi  linux_memory_setup.md
tests/: chembl-sample-bad.smi  legacy_fns.py  legacy_merges.py  test_bb_consistency.py  test_bblean.py  test_cli.py  test_fake_fps.py  test_fingerprints.py  test_global_clustering.py  test_import_bbtools.py  test_isim.py  test_merges.py  test_multiround.py  test_regression.py  test_sampling.py  test_similarity.py  test_simple.py  test_utils.py
