[project]
name = "bbtools"
authors = [
    {name = "Ramon Alain Miranda Quintana", email = "quintana@chem.ufl.edu"},
    {name = "Krisztina Zsigmond", email = "kzsigmond@ufl.edu"},
    {name = "Ignacio Pickering", email = "ipickering@ufl.edu"},
    {name = "Vicky (Vic) Jung", email = "jungvicky@ufl.edu"},
    {name = "Kenneth Lopez Perez", email = "klopezperez@chem.ufl.edu"},
    {name = "Kate Huddleston", email = "kdavis2@chem.ufl.edu"},
]
license = "GPL-3-only"
license-files = ["LICENSE", "GPL3.txt"]
description = "BitBirch Tools python package"
requires-python = ">=3.11"
dynamic = ["version", "readme"]
dependencies = [
    "numpy>=2.2",
    "rich",
    "typer",
    "rdkit",
    "scipy",
    "psutil",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/mqcomplab/bbtools.git"
repository = "https://github.com/mqcomplab/bbtools.git"
documentation = "https://github.com/mqcomplab/bbtools.git"

[project.scripts]
bb="bbtools.cli:app"

[tool.setuptools_scm]
version_file = "bbtools/_version.py"
fallback_version="0.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["bbtools*"]

[tool.black]
line-length = 88
target_version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
python_version = "3.11"
