[project]
name = "bblean"
authors = [
    {name = "The Miranda-Quintana Lab and other BitBirch developers"},
    {name = "Ramon Alain Miranda Quintana", email = "quintana@chem.ufl.edu"},
    {name = "Krisztina Zsigmond", email = "kzsigmond@ufl.edu"},
    {name = "Ignacio Pickering", email = "ipickering@ufl.edu"},
    {name = "Kenneth Lopez Perez", email = "klopezperez@chem.ufl.edu"},
    {name = "Miroslav Lzicar", email= "miroslav.lzicar@deepmedchem.com"},
]
license = {file = "LICENSE"}
description = "BitBirch-Lean Python package"
requires-python = ">=3.11"
dynamic = ["version", "readme"]
dependencies = [
    "numpy>=2.2",
    "rich",
    "typer",
    "rdkit",
    "scipy",
    "psutil",
]
classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: 4 - Beta",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/mqcomplab/bblean.git"
repository = "https://github.com/mqcomplab/bblean.git"
documentation = "https://github.com/mqcomplab/bblean.git"

[project.scripts]
bb="bblean.cli:app"

[tool.setuptools_scm]
version_file = "bblean/_version.py"
fallback_version="0.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["bblean*"]

[tool.black]
line-length = 88
target_version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
python_version = "3.11"
